--- a/jpn.html
+++ b/jpn.html
@@ -24,7 +24,10 @@
     <div id="background"></div>
     <div id="header"><!--<img src="./images/icon_transparent.png" class="icon">--><span id="header_title" style="display: inline-block"><span class="css-br">Mario Kart </span>Scoreboard</span><span id="select_language">
       <img src="./images/jpn.png" class="img_flag"> 日本語 /
-      <a href="./index.html" class="lang_text"><img src="./images/us.png" class="img_flag"><img src="./images/gb.png" class="img_flag"> English  </a>
+      <a href="./test_index.html" class="lang_text"><img src="./images/us.png" class="img_flag"><img src="./images/gb.png" class="img_flag"> English  </a>
+      <div style="text-align:center"><a
+			href="https://hlgn.github.io/mariokart-scoreboard/lounge.html"
+			style="color: white">lounge tool</a></div>
     </span></div>
     <br>
     <!--<div id="select_language">
