--- a/lounge_v2.html
+++ b/lounge_v2.html
@@ -27,7 +27,7 @@
 	<div id="header">
 		<!--<img src="./images/icon_transparent.png" class="icon">-->
 		<span id="header_title" style="display: inline-block"><span
-			class="css-br">Support tool </span>for Lounge</span> <span
+			class="css-br">Lounge tool </span>for Season4-</span> <span
 			id="select_language"> <a
 			href="https://hlgn.github.io/mariokart-scoreboard"
 			style="color: white">MarioKart<br>Scoreboard<br></a> <!--
