--- a/lounge.html
+++ b/lounge.html
@@ -38,6 +38,8 @@
 			-->
 		</span>
 	</div>
+	<br><a href="https://hlgn.github.io/mariokart-scoreboard/lounge_v2.html">Released new version for 150cc Lounge Season4!</a>
+	<br>
 	<br> (1)
 	<br> ↓Paste the full text by Boo bot (including "!scoreboard")
 	<br> (↓ここに!scoreboardを含む全文(Boo botの組み分け結果)をペーストしてください。)
