--- a/lounge_v2.html
+++ b/lounge_v2.html
@@ -60,12 +60,13 @@
 	page doesn't make a transition. -->
 	<br>
 	<br> (3)
-	<br> ↓Input points
+	<br> ↓Input points (個人点の入力)
 	<br>
 	<textarea id="outputText"></textarea>
 	<br>
 	<input type="button" value="check table on Lorenzi's Table Maker (optional)" onclick="check();"
 		id="check">
+	<br>↑集計確認用（任意）
 	<br>
 	<br>
 	(4) select format and tier
@@ -110,6 +111,11 @@
 		copy to clipboard
 		<input type="button" value="copy to clipboard" onclick="copy();" id="copy">
 	</label>
+	<br>
+	<br>
+	(7)
+	Paste this command at #bot-submission
+	<br>  (#bot-submissionにこのコマンドをペーストしてください)
 	<br>
 	<br>
 	<!--(3)<br>
