--- a/lounge_v2.html
+++ b/lounge_v2.html
@@ -69,7 +69,7 @@
 	<br>↑集計確認用（任意）
 	<br>
 	<br>
-	(4) select format and tier
+	(4) Select format and tier
 	<br>
 	format :
 	<select id="size" style="font-size:1em">
