--- a/lounge_v2.html
+++ b/lounge_v2.html
@@ -87,6 +87,7 @@
 		<option value='d'>d</option>
 		<option value='e'>e</option>
 		<option value='f'>f</option>
+		<option value='sq'>squad queue</option>
 		<option value='<tier>' selected>other</option>
 	</select>
 	<br>
