--- a/lounge_v2.html
+++ b/lounge_v2.html
@@ -134,6 +134,12 @@
 	<br>
 	<br>
 	<div id="blank"></div>
+	&lt;バージョン履歴&gt;<br>
+	21/02/28 : Squad Queueで最後のプレイヤー名がおかしくなる不具合の修正<br>
+	21/02/28 : プレイヤー名に空白を含むプレイヤーに対応<br>
+	21/02/12 : Squad Queueのカンマ区切りに対応<br>
+	21/01/10 : Season4に対応<br>
+	不具合がある際は<a href="https://twitter.com/hooligan_mk8d">@hooligan_mk8d</a> まで連絡頂けると助かります
 	<div id="foot">
 		<br> <a href="https://twitter.com/hooligan_mk8d" class="linktext"><img
 			src="./images/Twitter_White.png" class="img_Twitter"> Twitter
