--- a/lounge_v2.html
+++ b/lounge_v2.html
@@ -135,6 +135,7 @@
 	<br>
 	<div id="blank"></div>
 	&lt;バージョン履歴&gt;<br>
+	21/03/14 : 新たな集計方法に対応(!submit table→!submit)<br>
 	21/03/08 : ffaの変換の際にエラーが出るバグの修正<br>
 	21/02/28 : Squad Queueで最後のプレイヤー名がおかしくなる不具合の修正<br>
 	21/02/28 : プレイヤー名に空白を含むプレイヤーに対応<br>
