--- a/lounge_v2.html
+++ b/lounge_v2.html
@@ -39,8 +39,8 @@
 		</span>
 	</div>
 	<br> (1)
-	<br> ↓Paste the full text by Boo bot (including "!scoreboard")
-	<br> (↓ここに!scoreboardを含む全文(Boo botの組み分け結果)をペーストしてください。)
+	<br> ↓Paste the full text by MogiBot (including "!scoreboard")
+	<br> (↓ここに!scoreboardを含む全文(MogiBotの組み分け結果)をペーストしてください。)
 	<input type="button" value="load example" onclick="loadExample();"
 		id="loadExample">
 	<br>
