--- a/lounge_v2.html
+++ b/lounge_v2.html
@@ -82,6 +82,7 @@
 	<select id="tier" style="font-size:1em">
 		<option value='x'>x</option>
 		<option value='a'>a</option>
+		<option value='ab'>ab</option>
 		<option value='b'>b</option>
 		<option value='c'>c</option>
 		<option value='d'>d</option>
