--- a/lounge_v2.html
+++ b/lounge_v2.html
@@ -81,12 +81,16 @@
 	tier :
 	<select id="tier" style="font-size:1em">
 		<option value='x'>x</option>
+		<option value='s'>s</option>
 		<option value='a'>a</option>
-		<option value='ab'>ab</option>
 		<option value='b'>b</option>
+		<option value='bc'>bc</option>
 		<option value='c'>c</option>
+		<option value='cd'>cd</option>
 		<option value='d'>d</option>
+		<option value='de'>de</option>
 		<option value='e'>e</option>
+		<option value='ef'>ef</option>
 		<option value='f'>f</option>
 		<option value='sq'>squad queue</option>
 		<option value='<tier>' selected>other</option>
