--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </span></div>
     <br>
     <!--<div id="select_language">
-      <a href="./test_jpn.html"><img src="./images/jpn.png" class="img_flag"> 日本語 </a> /
+      <a href="./jpn.html"><img src="./images/jpn.png" class="img_flag"> 日本語 </a> /
       <img src="./images/us.png" class="img_flag"><img src="./images/gb.png" class="img_flag"> English
     </div>-->
     <div class="subject">(1) select image style</div>
