--- a/lounge_v2.html
+++ b/lounge_v2.html
@@ -83,6 +83,7 @@
 		<option value='x'>x</option>
 		<option value='s'>s</option>
 		<option value='a'>a</option>
+		<option value='ab'>ab</option>
 		<option value='b'>b</option>
 		<option value='bc'>bc</option>
 		<option value='c'>c</option>
