--- a/lounge_v2.html
+++ b/lounge_v2.html
@@ -93,6 +93,8 @@
 		<option value='e'>e</option>
 		<option value='ef'>ef</option>
 		<option value='f'>f</option>
+ 		<option value='fg'>fg</option>
+		<option value='g'>g</option>
 		<option value='sq'>squad queue</option>
 		<option value='<tier>' selected>other</option>
 	</select>
